# valkey-glide

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  package-lock.json  package.json
.github/: dependabot.yml
.github/json_matrices/: supported-languages-versions.json
.github/workflows/: codeql.yml  dependabot-management.yml  full-matrix-tests-sweeper.yml  git-secrets-scan.yml  go-cd.yml  go-modules.yml  go.yml  java-cd.yml  java-modules.yml  java.yml  lint-ts.yml  lint-yaml.yml  mkdocs-deploy.yml  node-modules.yml  node.yml  npm-cd.yml  ort-sweeper.yml  ort.yml  pypi-cd.yml  python-modules.yml  python.yml  redis-rs.yml  rust.yml  semgrep.yml
benchmarks/rust/: Cargo.toml
docs/: zero-copy-benchmarks.md  zero-copy-initiative.md
ffi/: Cargo.toml
ffi/miri-tests/: Cargo.toml
ffi/src/: lib.rs
ffi/tests/: ffi_client_tests.rs  test_otel_ffi_integration.rs
glide-core/: THIRD_PARTY_LICENSES_RUST
glide-core/benches/: memory_benchmark.rs
glide-core/src/: compression.rs
glide-core/telemetry/: Cargo.toml
glide-core/telemetry/src/: metrics_exporter_file.rs  open_telemetry.rs  span_exporter_file.rs
glide-core/telemetry/tests/: test_metrics_export.rs
glide-core/tests/: test_cache.rs  test_client.rs  test_compression.rs  test_monitor.rs  test_socket_listener.rs  test_standalone_client.rs
go/: THIRD_PARTY_LICENSES_GO  monitor_client.go
go/config/: config.go  (+1 more)
java/: AGENTS.md  THIRD_PARTY_LICENSES_JAVA  settings.gradle
node/: AGENTS.md  THIRD_PARTY_LICENSES_NODE  package-lock.json  package.json
python/: AGENTS.md  dev.py  dev_requirements.txt  pyproject.toml
(+198 files in other folders)
